--- a/music/templates/music/_artist.html
+++ b/music/templates/music/_artist.html
@@ -1,4 +1,5 @@
-<div class="post-media">
+<img src="{{ artist.image.url }}" width="100px">
+<div class="col-md-8">
     <h3>{{ artist.artist_name|safe }}</h3>
     <h4>@<a href="{{ artist.website }}">{{ artist.website }}</a></h4>
 <li>
