--- a/music/templates/music/artist_list.html
+++ b/music/templates/music/artist_list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block body_block %}
-    < class="col-md-8">
+    <div class="col-md-8">
         <h1>Artists: </h1>
         <ul>
             {% for artist in artist_list  %}
