--- a/templates/signup.html
+++ b/templates/signup.html
@@ -6,6 +6,7 @@
         {% csrf_token %}
         <fieldset class = "form-group">
             {{ form|crispy }}
+            {{ pform|crispy }}
         </fieldset>
         <div class="form-group">
             <button class="btn btn-outline-info" type="submit">Sign Up</button>
